sourceforge (2.6-0+13+) experimental; urgency=low

  * [Roland] Uuencoded all binary files in the source package, so that
    dpkg-source can build a .diff.gz from the .orig.tar.gz.  debian/rules
    changed accordingly to uudecode the *.uu files at build time, and to
    remove the resulting files at clean time.

 -- Roland Mas <lolando@debian.org>  Thu, 10 Oct 2002 14:30:47 +0200

sourceforge (2.6-0+13) experimental; urgency=low

  * [Christian] Added a dump and restore option to install-db.sh
  * [Christian] Added themeable main page support
  * [Christian] Rewritting of trove_getcatlisting function to
    return a string instead of direct printing
  * [Christian] you can choose default language in local.inc with
    e.g. $sys_lang='French';
  * [Roland] Added the files necessary for sourceforge-mta-postfix.  Yay!
    Our first try at flexibility!  Don't get any funny ideas though, I'm
    pretty confident it doesn't work.  Yet.
  * [Roland] [From 2.5] Changed the way we empty the LDAP directory, so as
    not to kill entries that are not ours.
  * [Roland] [From 2.5] Fixed last inserted languages.
  * [Soon-Son] added group write permission (0664) when creating the
    val-tags file in the CVSROOT directory of each project. Old
    configuration (0644) caused an error when the user tries to tag it as
    follows:
    $cvs up -r xterm-branch
    cvs [server aborted]: cannot write /cvsroot/[...]/CVSROOT/val-tags:
    Permission denied
  * [Roland] [From 2.5] New install-ldap.sh.  Should help killing our LDAP
    problems.  Still waiting for more testing, but it seems to mostly
    work.  There's still a bug in it, but it should be fairly simple to
    fix and I'm working on it.
  * [Roland] Various other cleanings in install-ldap.sh.
  * [Roland] Fixed dependencies of the packages.  Not as if it were really
    important before multi-host installations are officially supported,
    but it's good to do it nevertheless.